added all the pages in pages

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-  "organization_name": "PHD group",
+  "organization_name": "PHD Group",
   "organization_full_name": "Property Holdings Development Groups",
 
   "artist": "Artists",
