--- a/public/locales/tc/common.json
+++ b/public/locales/tc/common.json
@@ -1,5 +1,5 @@
 {
-  "organization_name": "博士組",
+  "organization_name": "PHD Group",
   "organization_full_name": "物業控股發展集團",
 
   "artist": "藝術家",
