--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,6 +5,6 @@
   "artist": "Artists",
   "exhibitions": "Exhibitions",
   "news": "News",
-  "publications": "Publications",
+  "publications": "Study",
   "about": "About"
 }
