add site credits

--- a/public/locales/tc/common.json
+++ b/public/locales/tc/common.json
@@ -3,8 +3,8 @@
   "organization_full_name": "物業控股發展集團",
 
   "artist": "藝術家",
-  "exhibitions": "展出",
+  "exhibitions": "展覽",
   "news": "新聞",
-  "publications": "學習",
-  "about": "關於"
+  "publications": "書齋",
+  "about": "關於我們"
 }
